src/renderer/src/index.css
@layer theme, base, antd, components, utilities;

@import '../assets/fonts.css';
@import 'tailwindcss';

@plugin '@tailwindcss/typography';
@plugin '../HeroUiConfig.ts';

@source '../../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
@custom-variant dark (&:is(.dark *));

@theme {
  --font-JetBrainsMono: JetBrainsMono, sans-serif;
  --font-Nunito: Nunito, sans-serif;

  --color-LynxOrange: #ff5f00;
  --color-LynxRaisinBlack: #212121;

  --color-LynxWhiteSecond: #f6f6f6;
  --color-LynxWhiteThird: #ececec;
  --color-LynxWhiteFourth: #e1e1e1;
  --color-LynxWhiteFifth: #d0d0d0;

  --color-DarkGray: #424242;

  --animate-shine: shine 5s linear infinite;

  @keyframes shine {
    0% {
      background-position: 100%;
    }
    100% {
      background-position: -100%;
    }
  }

  --background-image-GradientDark: linear-gradient(
    to right top,
    #212121,
    #202020,
    #1f1f1f,
    #1e1e1e,
    #1d1d1d,
    #1c1c1c,
    #1b1b1b,
    #1a1a1a,
    #181818,
    #161616,
    #141414,
    #121212
  );

  --background-image-GradientLight: linear-gradient(
    to right top,
    #f3f3f3,
    #f3f3f3,
    #f3f3f3,
    #f3f3f3,
    #f3f3f3,
    #f4f4f5,
    #f4f4f6,
    #f4f5f8,
    #f3f7fc,
    #f0fafe,
    #eefdfe,
    #eefffc
  );
}

:root {
  color-scheme: light dark;
  background-color: #212121;
  font-family: Nunito, sans-serif;

  --uninstalled-card-bg-color: #ededed;
  --accent-bg-color: #212121;
}

* {
  -webkit-user-select: none;
  -webkit-user-drag: none;
  font-family: Nunito, sans-serif;
}

.dark {
  --uninstalled-card-bg-color: #303030;
}

.bg-uninstalled {
  background: radial-gradient(circle at 50% 30%, var(--uninstalled-card-bg-color), transparent 70%);
}

.bg-installed {
  background: radial-gradient(circle at 50% 30%, var(--accent-bg-color), transparent 70%);
}

@media (prefers-color-scheme: dark) {
  /* Xterm(Terminal) scroll bar style */
  .xterm-viewport::-webkit-scrollbar-thumb {
    background: rgba(255, 255, 255, 0.1);
    border-radius: 10px;
  }
}

@media (prefers-color-scheme: light) {
  /* Xterm(Terminal) scroll bar style */
  .xterm-viewport::-webkit-scrollbar-thumb {
    background: rgba(0, 0, 0, 0.1);
    border-radius: 10px;
  }
}

/* Xterm(Terminal) scroll bar style */
.xterm-viewport::-webkit-scrollbar {
  width: 5px;
}

.draggable {
  -webkit-user-select: none;
  -webkit-app-region: drag;
}

.notDraggable {
  -webkit-app-region: no-drag;
}
/* ... */

